<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Places</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="boton_mostrar">Show places</string>
    <string name="boton_preferencias">Preferences</string>
    <string name="boton_acerca">About...</string>
    <string name="boton_salir">Exit</string>
    <string name="texto_nombre">Name</string>
    <string name="texto_tipo">Type</string>
    <string name="texto_direccion">Address</string>
    <string name="texto_telefono">Phone</string>
    <string name="texto_url">URL</string>
    <string name="texto_comentario">Coment</string>
    <string name="hint_nombre">Something that describe the place</string>
    <string name="hint_direccion">Place\'s address</string>
    <string name="hint_telefono">Phone for contact</string>
    <string name="hint_url">Web site</string>
    <string name="hint_comentario">Insert your notes</string>
    <string name="acercade">This program has been developed as example in Android Course for demonstrating how it can execute new activities from the main activity</string>
    <string name="title_activity_acerca_de">About...</string>
    <string name="title_activity_preferencias">Preferences</string>
    <string name="preference_correo">Email notifications</string>
    <string name="title_activity_vista_lugar">Show places</string>
</resources>